# rummibuk-helper

./: .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix
cmake/: Helpers.cmake
problems/: example1.txt  example2.txt  example3.txt  example4.txt
rummibuk/: CMakeLists.txt  brok.cc
rummibuk/solver/: CMakeLists.txt  search.cc  search.h  search_test.cc  tile.cc  tile.h  tile_test.cc
